<resources>
    <string name="app_name">Fitnet2.0</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Nick</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">El Nick  es invalido </string>
    <string name="error_invalid_password">La contraseña es demaciado corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_actividad_">Actividad_Activity</string>
    <string name="precio">Precio</string>
    <string name="dias">Dias:</string>
    <string name="periodo">Periodo:</string>
    <string name="ingresar">Ingresar</string>
    <string name="IngresarNombre">IngresarNombre</string>
    <string name="Nombre">Nombre:</string>
</resources>
